# crush-your-passion

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
claude-code/: INSTRUCTIONS.md
codex/: INSTRUCTIONS.md
core/: __init__.py  evaluator.py  locale.py
core/phases/: __init__.py  phase1_technical.py  phase2_commercial.py  phase3_strategic.py  phase4_final_blow.py
hermes/: SKILL.md
openclaw/: SKILL.md
stories/: when-the-spark-dies.md
tests/: test_evaluator.py
